--- a/roles/apache/templates/index.j2
+++ b/roles/apache/templates/index.j2
@@ -1,1 +1,1 @@
-Welcome to {{ ansible_facts.fqdn }} with {{ ansible_facts.default_ipv4.address }}
+Welcome to {{ ansible_facts.hostname }} with {{ ansible_facts.default_ipv4.address }}
